name:                icanhazrandomnumber
version:             0.1.0.0
synopsis:            An online random number generator of the highest order.   
license:             MIT
license-file:        LICENSE
author:              RJ Regenold
maintainer:          rjregenold@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

data-files:
  static/css/main.css

executable icanhazrandomnumber
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Main.hs

  build-depends: base       >= 4.6     && < 4.7
               , scotty     >= 0.7.2   && < 0.8
               , blaze-html >= 0.7.0.2 && < 0.8
               , random     >= 1.0.1.1 && < 1.1
               , wai-extra  >= 2.1.1.1 && < 2.2 

               , wai-middleware-static
               , mtl
               , text